force-app/main/default/objects/NC_Unit__c/NC_Unit__c.object-meta.xml
<CustomObject>
    <description>Unit for property</description>
    <label>Unit</label>
    <nameField>
        <displayFormat>U-{0000}</displayFormat>
        <label>Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>