force-app/main/default/objects/NC_Unit__c/fields/U_Description__c.field-meta.xml
<CustomField>
    <fullName>U_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>